<resources>
    <string name="app_name">SharedPreferences</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="load">Load</string>
    <string name="title_activity_load_data">LoadData</string>
</resources>
